fix(gui): resolve deprecation warnings in use-gui files