@@ -424,17 +424,7 @@ public class MenuScroller {
     }
   }
 
-  /**
-   * Ensures that the <code>dispose</code> method of this MenuScroller is
-   * called when there are no more refrences to it.
-   * 
-   * @exception  Throwable if an error occurs.
-   * @see MenuScroller#dispose()
-   */
-  @Override
-  public void finalize() throws Throwable {
-    dispose();
-  }
+  // Cleanup is handled by java.lang.ref.Cleaner registered in the constructor.
 
   private void refreshMenu() {
     if (menuItems != null && menuItems.length > 0) {
